--- a/dom 3-dars/index.html
+++ b/dom 3-dars/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <!-- <form>
         <h1>Sign Up</h1>
@@ -14,7 +16,20 @@
         <input type="password" placeholder="prolingizni kiriting">
         <button>Sumbit</button>
     </form> -->
-    
+
+    <h1>dom 3-dars</h1>
+    <hr>
+    <input type="text" id="text" placeholder="matn kiriting">
+    <h1>result: <span id="result"></span></h1>
+
+    <button id="btn">result</button>
+    <input type="checkbox" id="check">
+    <p id="para"></p>
+
+    <input type="range" style="width: 400px;" id="range" min="1" max="360" value="0">
+    <div class="box">1</div>
+
     <script src="./app.js"></script>
 </body>
+
 </html>
