--- a/dom 3-dars/index.html
+++ b/dom 3-dars/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
-    <!-- <form>
+<body id="body">
+    <ion-icon name="partly-sunny-outline" id="image"></ion-icon>
+    <form>
         <h1>Sign Up</h1>
-        <input type="text" placeholder="ismingizni kiriting">
-        <input type="email" placeholder="emailingizni kiriting">
-        <input type="password" placeholder="prolingizni kiriting">
-        <button>Sumbit</button>
-    </form> -->
+        <input id="input1" type="text" placeholder="ismingizni kiriting">
+        <input id="input2" type="email" placeholder="emailingizni kiriting">
+        <input id="input3" type="password" placeholder="prolingizni kiriting"><button type="button" id="koz">koz</button>
+        <button id="btn">Sumbit</button>
+    </form>
 
-    <h1>dom 3-dars</h1>
+    <!-- <h1>dom 3-dars</h1>
     <hr>
     <input type="text" id="text" placeholder="matn kiriting">
     <h1>result: <span id="result"></span></h1>
@@ -27,8 +28,10 @@
     <p id="para"></p>
 
     <input type="range" style="width: 400px;" id="range" min="1" max="360" value="0">
-    <div class="box">1</div>
+    <div class="box">1</div> -->
 
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="./app.js"></script>
 </body>
 
