--- a/form/index.html
+++ b/form/index.html
@@ -15,7 +15,7 @@
         <input id="input1" type="text" placeholder="ismingizni kiriting">
         <input id="input2" type="email" placeholder="emailingizni kiriting">
         <input id="input3" type="password" placeholder="prolingizni kiriting"><button type="button"
-            id="koz">koz</button>
+            id="koz">korish</button>
         <button id="btn">Sumbit</button>
     </form>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
