--- a/dom 5-dars/index.html
+++ b/dom 5-dars/index.html
@@ -9,17 +9,32 @@
 </head>
 
 <body>
-    <input type="text" id="text">
+    <!-- <input type="text" id="text">
     <button id="btn">get</button>
     <input type="checkbox" id="check">
     <input type="color" id="color">
     <h1 id="title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quae esse nobis dolorem? Vel, dolores.</h1>
 
     <select id="select">
-        <option value="uz">uzbek</option>
-        <option value="ru">russian</option>
-        <option value="eng">engilish</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
     </select>
+
+    <form id="form">
+        <button id="formdata">get</button>
+    </form> -->
+
+    <div id="data">
+
+    </div>
+    
+    <form id="form ">
+        <input type="text" id="ism" required>
+        <input type="text" id="fio" required>
+        <input type="text" id="age" required >
+        <button id="sumbit">sumbit</button>
+    </form>
 
     <script src="./app.js"></script>
 </body>
