--- a/hisobchi/index.html
+++ b/hisobchi/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="container" id="container">
-        <input class="data" id="data" type="date">
-    <h1 class="result" id="result">result: <span>0</span>yoshsiz</h1>
-    </div>
+     <div class="card">
+    <input type="date" id="birthdate">
+    <div class="result" id="result">result: 0 yosh</div>
     <script src="./app.js"></script>
 </body>
 </html>
