--- a/amaliyot/index.html
+++ b/amaliyot/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
-        <nav>
-            <h1><a href="index.html" style="color: rgb(255, 140, 0);">Open Shop</a></h1>
+        <nav class="nav"  data-aos="zoom-in">
+            <p style="font-size: 38px; font-weight: 600;" >Open <span style="color: orange;">Shop</span></p>
             <div class="menu">
 
                 <p>Bosh sahifa</p>
@@ -28,6 +29,9 @@
             </div>
         </nav>
 
+        <div class="carusel">
+        </div>
+
         <div class="site-bar">
             
         </div>
@@ -36,6 +40,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="./app.js" type="module"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 
 </html>
