--- a/amaliyot/index.html
+++ b/amaliyot/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <nav class="nav"  data-aos="zoom-in">
+        <nav class="nav">
             <p style="font-size: 38px; font-weight: 600;" >Open <span style="color: orange;">Shop</span></p>
             <div class="menu">
 
@@ -30,10 +30,27 @@
         </nav>
 
         <div class="carusel">
+            <img src="./image/image copy 8.png" id="img1">
+            <img src="./image/image copy 9.png" id="img2">
+            <img src="./image/image copy.png" id="img3">
+            <img src="./image/image.png" id="img4">
+
         </div>
+        <div class="btnlar">
+            <button id="btn1">1</button>
+            <button id="btn2">2</button>
+            <button id="btn3">3</button>
+            <button id="btn4">4</button>
+        </div>
+
 
         <div class="site-bar">
             
+        </div>
+
+        <div class="modal">
+            <ion-icon id="close" name="close-circle"></ion-icon>
+
         </div>
     </div>
 
