--- a/dom 8-dars/index.html
+++ b/dom 8-dars/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <input type="text" class="result">
+        <p class="errormsg">xatolik</p>
         <div class="grid-container">
             <button class="btn red">C</button>
             <button class="btn"><ion-icon name="backspace"></ion-icon></button>
