--- a/amaliyot/index.html
+++ b/amaliyot/index.html
@@ -15,11 +15,12 @@
             <p style="font-size: 38px; font-weight: 600;" >Open <span style="color: orange;">Shop</span></p>
             <div class="menu">
 
-                <p>Bosh sahifa</p>
+                <a href="smart.html">Bosh sahifa</a>
                 <p>Smartfonlar</p>
                 <p>Noutbooklar</p>
                 <p>Planshetlar</p>
                 <p>Aksesuarlar</p>
+
             </div>
             <div class="icon-box">
                 <ion-icon class="buy" name="bag-handle-outline"></ion-icon>
