--- a/amaliyot/index.html
+++ b/amaliyot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="nav.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -15,11 +16,11 @@
             <p style="font-size: 38px; font-weight: 600;" >Open <span style="color: orange;">Shop</span></p>
             <div class="menu">
 
-                <a href="smart.html">Bosh sahifa</a>
-                <p>Smartfonlar</p>
-                <p>Noutbooklar</p>
-                <p>Planshetlar</p>
-                <p>Aksesuarlar</p>
+                <p id="#">Bosh sahifa</p>
+                <p id="phone">Smartfonlar</p>
+                <p id="noutbook">Noutbooklar</p>
+                <p id="planshet">Planshetlar</p>
+                <p id="aksesuar">Aksesuarlar</p>
 
             </div>
             <div class="icon-box">
@@ -31,7 +32,7 @@
         </nav>
 
         <div class="carusel">
-            <img src="./image/image copy 8.png" id="img1">
+            <img src="./image/image_copy_8-removebg-preview.png" id="img1">
             <img src="./image/image copy 9.png" id="img2">
             <img src="./image/image copy.png" id="img3">
             <img src="./image/image.png" id="img4">
@@ -45,7 +46,7 @@
         </div>
 
 
-        <div class="site-bar">
+        <div class="phone-box">
             
         </div>
 
