--- a/amaliyot/index.html
+++ b/amaliyot/index.html
@@ -39,16 +39,17 @@
 
         </div>
         <div class="btnlar">
-            <button id="btn1">1</button>
-            <button id="btn2">2</button>
-            <button id="btn3">3</button>
-            <button id="btn4">4</button>
+            <button id="btn1"><p>1</p></button>
+            <button id="btn2"><p>2</p></button>
+            <button id="btn3"><p>3</p></button>
+            <button id="btn4"><p>4</p></button>
         </div>
 
 
         <div class="phone-box">
             
         </div>
+
 
         <div class="modal">
             <ion-icon id="close" name="close-circle"></ion-icon>
