--- a/dom 12-dars/video.html
+++ b/dom 12-dars/video.html
@@ -5,29 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./video.css">
 </head>
 
 <body>
     <nav>
-        <h1>peexel</h1>
-        <a href="video.html">videos</a>
-        <input class="input" type="text" placeholder="search...">
-        <ion-icon class="icon" name="search-outline"></ion-icon>
+        <h1>Peexel</h1>
+        <a href="index.html">photo</a>
+        <div class="search-box">
+            <input type="text" placeholder="search..." class="search">
+            <ion-icon class="icon" name="search-outline" style="cursor: pointer;"></ion-icon>
+        </div>
     </nav>
+    <div class="videos-box">
 
-
-    <div id="hashtag">
-
-    </div>
-
-    <div class="images">
-        <p>loading...</p>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="./app.js"></script>
+    <script src="./video.js"></script>
 </body>
 
 </html>
