--- a/dom 12-dars/video.html
+++ b/dom 12-dars/video.html
@@ -17,8 +17,13 @@
             <ion-icon class="icon" name="search-outline" style="cursor: pointer;"></ion-icon>
         </div>
     </nav>
-    <div class="videos-box">
 
+    <div id="hashtag">
+
+    </div>
+
+    <div class="videos-box">
+        <h1>loading...</h1>
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
