--- a/sotuv sistem/index.html
+++ b/sotuv sistem/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <nav>
-            <h1>logo</h1>
+            <img src="./image/68bebed7d83489.42221881Processed.png " alt=""></h1>
             <div class="hreflar">
                 <a href="#">Bosh sahifa</a>
                 <a href="#">Savdo</a>
@@ -65,6 +65,54 @@
                 <span class="dot" onclick="currentSlide(3)"></span>
                 <span class="dot" onclick="currentSlide(4)"></span>
                 <span class="dot" onclick="currentSlide(5)"></span>
+            </div>
+        </div>
+
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
+
+        <div class="chart">
+            <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+            <h1>Hisobot</h1>
+        </div>
+
+        <script>
+            var xValues = ["oyoq kiyimlar", "shimlar", "koylakalar", "kitellar", "sviterlar", "jenferlar"];
+            var yValues = [55, 49, 44, 24, 15, 10];
+            var barColors = [
+                "#b91d47",
+                "#00aba9",
+                "#2b5797",
+                "#e8c3b9",
+                "#1e7145",
+                "white"
+            ];
+
+            new Chart("myChart", {
+                type: "pie",
+                data: {
+                    labels: xValues,
+                    datasets: [{
+                        backgroundColor: barColors,
+                        data: yValues
+                    }]
+                },
+                options: {
+                    title: {
+                        display: true,
+                        text: "World Wide Wine Production 2018"
+                    }
+                }
+            });
+        </script>
+
+        <div class="brand">
+            <h1>Brand</h1>
+            <div class="cardlar">
+                <img src="https://www.logomaker.com/api/main/ph/zjHl2lgaccgaujjsPkO66iyq4bXE...VMWx0CclXcEM20e40woz2J46bYitag2LwtDpQ5J0kNaHYJ0yHF2R9xM2Bds9j6MMIlLXHdomHVGCrhDFjB3JAKSR6fd6x83yrcyhZBI4B6QDA==" alt="">
+                <img src="https://www.logomaker.com/api/main/ph/zjHl2lgaccgaujjsPkO66iyq4afA7EYNzUKijmM8fHMNqk05...2Rkxqdm8Ot4bkJCsAZe7FBGMpMwnngiBY0chRtk9j2FPoJVDSE8k3tAWqlZTGZsLU2WXKuRr00...zLM0g5RC4Q==" alt="">
+                <img class="png" src="https://www.logomaker.com/api/main/ph/zjHl2lgaccgaujjsPkO61zv30KPCuksWzBPE3j9qYzJB8gZ602RyxKdmiYBAPEFRvwYG9moZJJl...1XU...XMBL2wwgoWbMfN5OWnl7ySkHVu4OGw=="" alt="">
             </div>
         </div>
 
