--- a/sotuv sistem/savdo.html
+++ b/sotuv sistem/savdo.html
@@ -16,7 +16,8 @@
             <a href="Savdo.html">Savdo</a>
             <a href="Ombor.html">Ombor</a>
             <a href="Daromad.html">Daromad</a>
-             <a id="profileLink" href="login.html"><ion-icon style="font-size: 50px;" name="person-circle-sharp"></ion-icon></a>
+            <a id="profileLink" href="login.html"><ion-icon style="font-size: 50px;"
+                    name="person-circle-sharp"></ion-icon></a>
 
         </div>
     </nav>
@@ -28,6 +29,36 @@
                 hisob-kitobda adashmaysiz ishingiz tez va oson bitadi</p>
             <div class="modal1">
                 <ion-icon class="exit" name="close-circle-sharp"></ion-icon>
+
+                <h1 class="sotuv-h1">Sotuv royxati</h1>
+
+                <table style="width:95%">
+                    <tr>
+                        <th>Maxsulot nomi</th>
+                        <th>Soni</th>
+                        <th>Razmeri</th>
+                        <th>Narxi</th>
+                    </tr>
+                    <tr>
+                        <td><input type="text" placeholder="Maxsulot nomi"></td>
+                        <td><input type="text" placeholder="Soni"></td>
+                        <td><input type="text" placeholder="Razmeri"></td>
+                        <td><input type="text" placeholder="Narxi"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" placeholder="Maxsulot nomi"></td>
+                        <td><input type="text" placeholder="Soni"></td>
+                        <td><input type="text" placeholder="Razmeri"></td>
+                        <td><input type="text" placeholder="Narxi"></td>
+                    </tr>
+
+                    <tr>
+                        <td><input type="text" placeholder="Maxsulot nomi"></td>
+                        <td><input type="text" placeholder="Soni"></td>
+                        <td><input type="text" placeholder="Razmeri"></td>
+                        <td><input type="text" placeholder="Narxi"></td>
+                    </tr>
+                </table>
             </div>
         </div>
         <div class="btnCard2">
