--- a/sotuv sistem/profil.html
+++ b/sotuv sistem/profil.html
@@ -73,13 +73,13 @@
       margin-top: 5px;
     }
 
-    .info ion-icon{
+    .info ion-icon {
       padding: 4px;
       transition: 0.1s;
       border-radius: 3px;
     }
 
-    .info ion-icon:hover{
+    .info ion-icon:hover {
       box-shadow: 0 0 10px #e50914;
       background-color: #cb0b15;
     }
@@ -120,7 +120,7 @@
       box-shadow: 0 0 20px red;
     }
 
-    .close{
+    .close {
       position: absolute;
       left: 20px;
       top: 35px;
@@ -130,44 +130,49 @@
       border-radius: 6px;
       padding: 4px;
     }
-    .close:hover{
+
+    .close:hover {
       background-color: rgba(99, 99, 99, 00.5);
     }
 
-    .notes{
+    .notes {
       margin-left: 908px;
       margin-top: 70px;
       transform: translateY(-100px);
       transition: 0.5s;
     }
-    .openNotes{
+
+    .openNotes {
       transform: translateY(0);
     }
   </style>
 </head>
 
 <body>
-    <div class="close" id="close">
-      <a href="index.html" style="color: white;"><ion-icon name="chevron-back-outline"></ion-icon></a>
-    </div>
+  <div class="close" id="close">
+    <a href="index.html" style="color: white;"><ion-icon name="chevron-back-outline"></ion-icon></a>
+  </div>
 
-    <div class="notes" id="notes">
-      <p>Profil Yangilandi <ion-icon name="checkmark"></ion-icon></p>
-    </div>
+  <div class="notes" id="notes">
+    <p>Profil Yangilandi <ion-icon name="checkmark"></ion-icon></p>
+  </div>
 
   <div class="container">
     <label for="uploadImg">
-      <img src="./rasm/user-icon-on-transparent-background-free-png.webp" alt="Foydalanuvchi rasmi" id="profileImage" class="profile-img" />
+      <img src="./image/68bebed7d83489.42221881Processed.png" alt="Foydalanuvchi rasmi" id="profileImage"
+        class="profile-img" />
     </label>
     <input type="file" accept="image/*" id="uploadImg" class="input-img" />
 
     <div class="info">
-      <p id="nameDisplay">Ismingiz <span class="edit-icon" onclick="editField('name')"><ion-icon name="pencil-sharp"></ion-icon></span></p>
+      <p id="nameDisplay">Ismingiz: <span id="backendname"></span> <span class="edit-icon" onclick="editField('name')"><ion-icon
+            name="pencil-sharp"></ion-icon></span></p>
       <input type="text" id="nameInput" style="display:none; margin: 0 auto;" />
     </div>
 
     <div class="info">
-      <p id="emailDisplay">Email manzil <span class="edit-icon" onclick="editField('email')"><ion-icon name="pencil-sharp"></ion-icon></span></p>
+      <p id="emailDisplay">Email manzil: <span id="backemail"></span> <span class="edit-icon" onclick="editField('email')"><ion-icon
+            name="pencil-sharp"></ion-icon></span></p>
       <input type="text" id="emailInput" style="display:none; margin: 0 auto;" />
     </div>
 
@@ -176,21 +181,49 @@
   </div>
 
 
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
   <script>
+
+
+    const getme = async () => {
+      try {
+        const token = localStorage.getItem('token')
+     
+        const response = await fetch('http://localhost:5000/api/auth/me', {
+          headers: {
+            Authorization:token
+          }
+        }).then(res => res.json()).then(data => data)
+
+        console.log(response, 'me')
+        backendname.textContent = response.user.name
+        backemail.textContent = response.user.email
+
+      } catch (err) {
+        console.log(err, "Xatolik")
+      }
+
+
+    }
+    getme()
+
+
+
+
+
     // Ma'lumotlarni ko'rsatish
-    window.onload = () => {
-      const name = localStorage.getItem("username") || "Ismingiz";
-      const email = localStorage.getItem("email") || "Email manzil";
-      const img = localStorage.getItem("profileImage");
+    // window.onload = () => {
+    //   const name = localStorage.getItem("username") || "Ismingiz";
+    //   const email = localStorage.getItem("email") || "Email manzil";
+    //   const img = localStorage.getItem("profileImage");
 
-      document.getElementById("nameDisplay").childNodes[0].textContent = name + " ";
-      document.getElementById("emailDisplay").childNodes[0].textContent = email + " ";
+    //   document.getElementById("nameDisplay").childNodes[0].textContent = name + " ";
+    //   document.getElementById("emailDisplay").childNodes[0].textContent = email + " ";
 
-      if (img) document.getElementById("profileImage").src = img;
-    };
+    //   if (img) document.getElementById("profileImage").src = img;
+    // };
 
     // Rasm yuklash
     document.getElementById("uploadImg").addEventListener("change", function (e) {
