--- a/sotuv sistem/register.html
+++ b/sotuv sistem/register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="rasm/cinema tv copy.png">
-  <title>Ro'yhatdan o'tish - Cinema TV</title>
+  <title>Ro'yhatdan o'tish - trade</title>
   <style>
     * {
       margin: 0;
@@ -125,13 +125,18 @@
       transform: translateY(-1100px);
       transition: 0.5s;
     }
+
+    header img {
+      width: 200px;
+    }
   </style>
 </head>
 
 <body>
 
   <nav>
-    <header style="margin-left: 20px;"><a href="index.html">Cinema TV</a></header>
+    <header style="margin-left: 20px;"><a href="index.html"><img src="./image/68bebed7d83489.42221881Processed.png"
+          alt=""></a></header>
   </nav>
 
   <div id="errorBox" class="error"><span><ion-icon name="alert-circle" style="margin-left: 7px;"></ion-icon></span>Parol
@@ -139,13 +144,10 @@
 
   <div class="register-container">
     <h2>Ro'yhatdan o'tish</h2>
-    <form id="registerForm">
+    <form id="Form">
       <input type="text" id="regName" placeholder="Ismingiz" required>
       <input type="email" id="regEmail" placeholder="Email manzil" required>
       <input type="password" id="regPassword" placeholder="Parol" required>
-      <input type="password" id="confirmPassword" placeholder="Parolni tasdiqlang" required>
-      <span id="icon"><img src="./rasm/password-eye.png"
-          id="eye"></ion-icon></span>
       <button type="submit">Ro'yhatdan o'tish</button>
     </form>
     <div class="login-link">
@@ -157,50 +159,42 @@
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
+
+
   <script>
-    const registerForm = document.getElementById('registerForm');
+    const registerForm = document.getElementById('Form');
 
-    registerForm.addEventListener('submit', function (e) {
-      e.preventDefault();
-
+    registerForm.onsubmit = (e) => {
+      e.preventDefault()
       const name = document.getElementById('regName').value;
       const email = document.getElementById('regEmail').value;
       const password = document.getElementById('regPassword').value;
-      const confirmPassword = document.getElementById('confirmPassword').value;
+
+      let obj = { name, email, password }
+
+      const register = async (obj) => {
+        try {
+         
+          const response = await fetch('http://localhost:5000/api/auth/register', {
+            method: 'POST',
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(obj)
+          }).then(res => res.json()).then(data => data)
+
+          console.log(response, 'salom')
+       
+        } catch (err) {
+          console.log(err, "Xatolik")
+        }
 
 
-      if (password !== confirmPassword) {
-        setTimeout(() => {
-          errorBox.style.transform = 'translateY(-1100px)';
-        }, 4000)
-        errorBox.style.transform = 'translateY(0px)';
-        return;
+
       }
 
-      // Ma'lumotlarni saqlash
-      localStorage.setItem('username', name);
-      localStorage.setItem('email', email);
-      localStorage.setItem('password', password);
 
-      // Kirish sahifasiga yo‘naltirish
-      window.location.href = 'login.html';
-    });
-
-    let eye = document.getElementById('eye')
-
-    let Toggle = false
-    eye.onclick = () => {
-      Toggle = !Toggle
-
-      if (Toggle) {
-        confirmPassword.type = 'text'
-        // icon.innerHTML = '<ion-icon name="eye-off-outline" id="eye"></ion-icon>'
-      }
-      else {
-        confirmPassword.type = 'password'
-        // icon.innerHTML = '<ion-icon name="eye-outline" id="eye"></ion-icon>'
-      }
-      console.log(Toggle)
+      register(obj)
     }
 
   </script>
