--- a/sotuv sistem/ombor.html
+++ b/sotuv sistem/ombor.html
@@ -21,7 +21,15 @@
 
         </div>
     </nav>
-    <script>
+
+    <div class="savdo-box">
+        <input class="savdo-int" type="text" placeholder="maxsulot nomi">
+        <input class="savdo-int savdo-int1" type="text" placeholder="maxsulot razmeri">
+        <input class="savdo-int savdo-int2" type="text" placeholder="maxsulot soni">
+        <input class="savdo-int savdo-int3" type="text" placeholder="maxsulot narxi">
+        <button class="add">qo'shish</button>
+    </div>
+    <script src="ombor.js">
         let profileLink = document.getElementById('profileLink')
         const isLoggedIn = localStorage.getItem("password");
 
