--- a/sotuv sistem/profil.html
+++ b/sotuv sistem/profil.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="rasm/cinema tv copy.png">
-  <title>Profil - Cinema TV</title>
+  <title>Profil - Trade</title>
   <style>
     body {
       background-color: #121212;
@@ -35,7 +35,7 @@
       margin: 70px auto;
       padding: 30px;
       background-color: #1f1f1f;
-      box-shadow: 0 0 30px rgb(243, 2, 2);
+      box-shadow: 0 0 30px #033D62;
       border-radius: 10px;
       text-align: center;
       transition: 0.5s;
@@ -80,13 +80,13 @@
     }
 
     .info ion-icon:hover {
-      box-shadow: 0 0 10px #e50914;
-      background-color: #cb0b15;
+      box-shadow: 0 0 10px #033D62;
+      background-color: #033D62;
     }
 
     #saveBtn {
       margin-top: 20px;
-      background-color: #e50914;
+      background-color: #033D62;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -98,8 +98,8 @@
     }
 
     #saveBtn:hover {
-      background-color: #cb0b15;
-      box-shadow: 0 0 50px rgb(243, 2, 2);
+      background-color: #033D62;
+      box-shadow: 0 0 50px #033D62;
     }
 
     #logoutBtn {
@@ -116,8 +116,8 @@
     }
 
     #logoutBtn:hover {
-      background-color: #e50914;
-      box-shadow: 0 0 20px red;
+      background-color: #033D62;
+      box-shadow: 0 0 20px #033D62;
     }
 
     .close {
@@ -159,7 +159,7 @@
 
   <div class="container">
     <label for="uploadImg">
-      <img src="./image/68bebed7d83489.42221881Processed.png" alt="Foydalanuvchi rasmi" id="profileImage"
+      <img src="image/image.png" alt="Foydalanuvchi rasmi" id="profileImage"
         class="profile-img" />
     </label>
     <input type="file" accept="image/*" id="uploadImg" class="input-img" />
