--- a/sotuv sistem/savdo.html
+++ b/sotuv sistem/savdo.html
@@ -32,33 +32,14 @@
 
                 <h1 class="sotuv-h1">Sotuv royxati</h1>
 
-                <table style="width:95%">
-                    <tr>
-                        <th>Maxsulot nomi</th>
-                        <th>Soni</th>
-                        <th>Razmeri</th>
-                        <th>Narxi</th>
-                    </tr>
-                    <tr>
-                        <td><input type="text" placeholder="Maxsulot nomi"></td>
-                        <td><input type="text" placeholder="Soni"></td>
-                        <td><input type="text" placeholder="Razmeri"></td>
-                        <td><input type="text" placeholder="Narxi"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="text" placeholder="Maxsulot nomi"></td>
-                        <td><input type="text" placeholder="Soni"></td>
-                        <td><input type="text" placeholder="Razmeri"></td>
-                        <td><input type="text" placeholder="Narxi"></td>
-                    </tr>
-
-                    <tr>
-                        <td><input type="text" placeholder="Maxsulot nomi"></td>
-                        <td><input type="text" placeholder="Soni"></td>
-                        <td><input type="text" placeholder="Razmeri"></td>
-                        <td><input type="text" placeholder="Narxi"></td>
-                    </tr>
-                </table>
+                <div class="savdo-box">
+                    <input class="savdo-int" type="text" placeholder="maxsulot nomi">
+                    <input class="savdo-int" type="text" placeholder="maxsulot razmeri">
+                    <input class="savdo-int" type="text" placeholder="maxsulot soni">
+                    <input class="savdo-int" type="text" placeholder="maxsulot narxi">
+                    <button class="add">qo'shish</button>
+                    <button class="delete">o'chirish</button>
+                </div>
             </div>
         </div>
         <div class="btnCard2">
@@ -68,6 +49,15 @@
 
             <div class="modal2">
                 <ion-icon class="exit1" name="close-circle-sharp"></ion-icon>
+                <h1 class="sotuv-h1">Qaytganlar royxati</h1>
+                <div class="savdo-box">
+                    <input class="savdo-int" type="text" placeholder="maxsulot nomi">
+                    <input class="savdo-int" type="text" placeholder="maxsulot razmeri">
+                    <input class="savdo-int" type="text" placeholder="maxsulot soni">
+                    <input class="savdo-int" type="text" placeholder="maxsulot narxi">
+                    <button class="add">qo'shish</button>
+                    <button class="delete">o'chirish</button>
+                </div>
             </div>
         </div>
     </div>
