--- a/sotuv sistem/daromad/daromad.html
+++ b/sotuv sistem/daromad/daromad.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./daromad.css">
+    <link rel="stylesheet" href="../daromad/daromad.css">
 </head>
 
 <body>
     <nav>
-        <img src="./image/68bebed7d83489.42221881Processed.png " alt=""></h1>
+        <a href="../index.html"><img src="../image/68bebed7d83489.42221881Processed.png" alt=""></a>
         <div class="hreflar">
-            <a href="index.html">Bosh sahifa</a>
-            <a href="Savdo.html">Savdo</a>
-            <a href="Ombor.html">Ombor</a>
-            <a href="Daromad.html">Daromad</a>
-            <a id="profileLink" href="login.html"><ion-icon style="font-size: 50px;"
+            <a href="../index.html">Bosh sahifa</a>
+            <a href="../savdo/savdo.html">Savdo</a>
+            <a href="../ombor/ombor.html">Ombor</a>
+            <a href="../daromad/daromad.html">Daromad</a>
+            <a id="profileLink" href="../login/login.html"><ion-icon style="font-size: 50px;"
                     name="person-circle-sharp"></ion-icon></a>
         </div>
     </nav>
