--- a/sotuvsistem/ombor/ombor.html
+++ b/sotuvsistem/ombor/ombor.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../ombor/ombor.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
 </head>
 
 <body>
@@ -16,8 +18,10 @@
             <a href="../savdo/savdo.html">Savdo</a>
             <a href="../ombor/ombor.html">Ombor</a>
             <a href="../daromad/daromad.html">Daromad</a>
-            <a id="profileLink" href="../login/login.html"><ion-icon style="font-size: 50px;"
-                    name="person-circle-sharp"></ion-icon></a>
+            <a id="profileLink" href="">
+                <ion-icon style="font-size: 50px;"
+                    name="person-circle-sharp"></ion-icon>
+                </a>
 
         </div>
     </nav>
@@ -37,6 +41,8 @@
     <script src="../ombor/ombor.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+
 </body>
 
 </html>
