--- a/sotuvsistem/savdo/savdo.html
+++ b/sotuvsistem/savdo/savdo.html
@@ -49,15 +49,13 @@
             <div class="modal2">
                 <ion-icon class="exit1" name="close-circle-sharp"></ion-icon>
                 <h1 class="sotuv-h1">Qaytganlar royxati</h1>
-                <div class="savdo-box">
-                    <input class="savdo-int" type="text" placeholder="maxsulot nomi">
-                    <input class="savdo-int" type="text" placeholder="maxsulot razmeri">
-                    <input class="savdo-int" type="text" placeholder="maxsulot soni">
-                    <input class="savdo-int" type="text" placeholder="maxsulot narxi">
-                    <button class="add">qo'shish</button>
+
+                <div class="savdoBox2">
+
                 </div>
             </div>
         </div>
+
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
