--- a/sotuvsistem/index.html
+++ b/sotuvsistem/index.html
@@ -20,7 +20,7 @@
                 <a href="./savdo/savdo.html">Savdo</a>
                 <a href="./ombor/ombor.html">Ombor</a>
                 <a href="./daromad/daromad.html">Daromad</a>
-                <a id="profileLink" href=""><ion-icon id="profilIcon" style="font-size: 50px; color: black;" name="person-circle-sharp"></ion-icon></a>
+                <a id="profileLink" href="./login/login.html"><ion-icon id="profilIcon" style="font-size: 50px; color: black;" name="person-circle-sharp"></ion-icon></a>
             </div>
         </nav>
 
